Mudei o clean pq quando compilava ele tentava excluir o main.o que nem existia ainda

--- a/modelo-sfml-windows/Makefile
+++ b/modelo-sfml-windows/Makefile
@@ -37,4 +37,4 @@ link:
 	g++ $(OBJ_FILES) -o main -LSFML/lib -lsfml-graphics -lsfml-window -lsfml-system -lopengl32 -lsfml-audio
 # Limpar os arquivos .o e o executável
 clean:
-	rm -rf $(OBJ_DIR)/*.o main
+	@if exist $(OBJ_DIR)/*.o main rm -rf $(OBJ_DIR)/*.o main
